[project]
requires-python = ">=3.10"
name = "dsnparse"
version = "0.4.0"
readme = "README.md"
description = "parse dsn urls"
authors = [
  { name = "Jay Marcyes", email = "jay@marcyes.com" }
]
keywords = [
  "dsn url parser database configuration"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
license = "MIT"
license-files = [
  "LICENSE.txt"
]

[build-system]
requires = [
  "setuptools>=62.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
  "tests*",
  "example*",
  "*_test*",
  "docs*"
]
include = [
  "dsnparse*"
]

[project.urls]
Repository = "https://github.com/Jaymon/dsnparse"
Homepage = "http://github.com/Jaymon/dsnparse"

